[package]
name = "rusty_secrets"
version = "0.2.3-pre"
authors = [
  "Frederic Jacobs <github@fredericjacobs.com>",
  "Romain Ruetschi <romain.ruetschi@gmail.com>",
  "Dylan Bourgeois <dtsbourg@gmail.com>",
  "Noah Vesely <fowlslegs@riseup.net>",
  "sellibitze"
]
description = "Implementation of threshold Shamir's secret sharing in the Rust programming language."
homepage = "https://github.com/freedomofpress/RustySecrets"
license = "BSD-3-Clause"
readme = "README.md"
edition = "2021"
build = "build.rs"

exclude = ["Cargo.lock"]

[features]
default = []
dss = ["rand_chacha"]

[dependencies]
base64 = "0.22"
rand = "0.9"
rand_chacha = { version = "0.9", optional = true }
ring = "0.17"
merkle_sigs = { git = "https://github.com/n80fr1n60/merkle_sigs.rs", branch = "master" }
protobuf = "3.7"
thiserror = "2"

[build-dependencies]
protobuf-codegen = "3.7"

[dev-dependencies]
criterion = "0.8.2"
itertools = "0.14"
quickcheck = "1.1"
flate2 = "1.1"
rand = "0.9"
rand_chacha = "0.9"

[[bench]]
name = "sss"
harness = false

[[bench]]
name = "wrapped_secrets"
harness = false

[[bench]]
name = "ss1"
harness = false
required-features = ["dss"]

[[bench]]
name = "thss"
harness = false
required-features = ["dss"]

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[package.metadata.release]
sign-commit = true
upload-doc = true
doc-branch = "gh-pages"
pre-release-commit-message = "Release version {{version}}."
pro-release-commit-message = "Start next development iteration {{version}}."
tag-prefix = "v"
tag-message = "Release version {{version}}."
doc-commit-message = "Update documentation."
dev-version-ext = "pre"
